--- a/webserver.yml
+++ b/webserver.yml
@@ -1,14 +1,15 @@
 ---
 - name: New webserver playbook
-  hosts: ansibleclient
-
+  hosts: jenkinslave
+  
   tasks:
-    - name: Package installation
+    - name: Package Installation
       yum: name=httpd state=present
 
-    - name: Amaneding webserver configuration file
-      copy: path=/var/www/html/index.html content="This is my git managed server file"
+    - name: Amanding webserver configuration file
+      copy: dest=/var/www/html/index.html content="This is my first Web server"
 
     - name: Starting webserver services
       service: name=httpd state=started
 ...
+   
