--- a/webserver.yml
+++ b/webserver.yml
@@ -1,15 +1,15 @@
 ---
 - name: New webserver playbook
-  hosts: jenkinslave
-  
+  hosts: ansibleclient
+
   tasks:
-    - name: Package Installation
+    - name: Package installation
       yum: name=httpd state=present
 
-    - name: Amanding webserver configuration file
-      copy: dest=/var/www/html/index.html content="This is my first Web server With JENKINS with AutoBuild"
+    - name: Amaneding webserver configuration file
+      copy: dest=/var/www/html/index.html content="This is my git managed server file"
 
     - name: Starting webserver services
       service: name=httpd state=started
 ...
-   
+
