--- a/webserver.yml
+++ b/webserver.yml
@@ -7,7 +7,7 @@
       yum: name=httpd state=present
 
     - name: Amaneding webserver configuration file
-      copy: dest=/var/www/html/index.html content="This is my git managed server file"
+      copy: dest=/var/www/html/index.html content="This is my git managed server file Testing1"
 
     - name: Starting webserver services
       service: name=httpd state=started
